# sa-takehome-project-python

./: README.md  app.py  pyproject.toml  requirements.txt
public/css/: custom.css
public/js/: checkout.js  complete.js
views/: checkout.html  complete.html  index.html  success.html
views/layouts/: main.html
